# django-vite-example

./: .env.example  .gitignore  Dockerfile  README.md  compose.yml  dependabot.yml  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
assets/: package.json  pnpm-lock.yaml  vite.config.js
assets/css/: main.css
assets/js/: unpoly.js
assets/src/css/: main.css
assets/src/js/: main.js
assets/src/js/lib/: unpoly.js
src/: .coverage
src/apps/demo/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/demo/templates/: form.html  index.html  team_detail.html  team_members.html
src/apps/demo/tests/: test_views.py
src/apps/users/: admin.py  forms.py  models.py
src/apps/users/migrations/: 0001_initial.py
src/config/: urls.py
src/config/settings/: base.py  dev.py  test.py
src/templates/account/: base.html  login.html
src/templates/cotton/: button.html  heading.html  link.html  section.html  subheading.html
src/templates/cotton/button/: index.html  wrapper.html
src/templates/cotton/checkbox/: index.html
src/templates/cotton/dropdown/: index-todo.html
src/templates/cotton/form/: fieldgroup.html
src/templates/cotton/icon/: arrow_right_start_on_rectangle_20_solid.html  chevron_down.html  chevron_up_16_solid.html  cog_6_tooth_16_solid.html  credit_card_solid.html  home.html  minus.html  moon_solid.html  plus.html  question_mark_circle.html  question_mark_circle_16_solid.html  sun_solid.html  user_20_solid.html  user_group_solid.html
src/templates/cotton/layout/: auth.html  base.html  default.html
(+11 files in other folders)
