[project]
name = "django-unpoly-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <4"
dependencies = [
    "django>=5.1.4",
    "django-allauth>=65.7.0",
    "django-cotton>=1.5.2",
    "django-environ>=0.11.2",
    "django-structlog>=9.0.0",
    "django-vite>=3.0.6",
    "granian>=1.7.4",
    "psycopg[binary]>=3.2.3",
    "unpoly>=3.1.0",
    "whitenoise>=6.8.2",
]

[dependency-groups]
dev = [
    "cotton-iconify>=0.1.0",
    "django-debug-toolbar>=4.4.6",
    "djlint>=1.36.4",
    "granian[reload]>=1.7.4",
    "ruff>=0.9.1",
]
test = ["pytest-django>=4.9.0", "coverage>=7.8.0",]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"

[tool.ruff]
include = ["src/**.py"]
extend-exclude = ["migrations", "static"]


[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "D203", "D212", "COM812", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"*/tests/**.py" = ["S101"]

[tool.djlint]
format_attribute_template_tags=true
